--- a/testTE/src/app/notification/notification.component.html
+++ b/testTE/src/app/notification/notification.component.html
@@ -1,1 +1,2 @@
-<p>notification works!</p>
+<div class="count">{{ count }}</div>
+<img src="/icons/notifications.png" alt="notification" class="notification" />
