--- a/testTE/src/app/header/header.component.scss
+++ b/testTE/src/app/header/header.component.scss
@@ -1,8 +1,9 @@
 @import "./../../styles.scss";
 :host {
+  padding: 0 1%;
   width: 98%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1%;
+  background-color: $primary-blue;
 }
