--- a/testTE/src/app/header/header.component.html
+++ b/testTE/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<img src="/images/logo.png" alt="logo" />
-<app-input></app-input>
-<app-notification></app-notification>
-<app-user-info></app-user-info>
+<header (mousedown)="hideSearch($event)">
+  <img src="/images/logo.png" alt="logo" />
+  <app-input></app-input>
+  <app-user-info></app-user-info>
+</header>
