--- a/testTE/src/app/notification/notification.component.html
+++ b/testTE/src/app/notification/notification.component.html
@@ -1,2 +1,2 @@
 <div class="count">{{ count }}</div>
-<img src="/icons/notifications.png" alt="notification" class="notification" />
+<img src="/icons/notifications.png" alt="notification" class="icon" />
