--- a/testTE/src/app/input/input.component.scss
+++ b/testTE/src/app/input/input.component.scss
@@ -1,14 +1,14 @@
 @import "./../../styles.scss";
 :host {
   display: flex;
-  width: 50%;
+  width: 53%;
   align-items: center;
   justify-content: space-between;
-  margin-right: 22%;
+  margin-right: 25%;
   .wrapper {
-    margin-right: 7%;
+    margin-right: 4%;
     display: flex;
-    width: 78%;
+    width: 93%;
     justify-content: space-between;
     .item {
       display: flex;
@@ -24,6 +24,32 @@
         font-weight: 400;
         line-height: 20px;
         letter-spacing: 0.035px;
+      }
+    }
+    .button--search {
+      margin: 0 0 0 6%;
+      border: none;
+      background-color: transparent;
+    }
+  }
+  .search__block {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    input {
+      padding: 0.1% 2%;
+      height: 3em;
+      border: 1px solid transparent;
+      border-radius: 3px;
+      color: $text-grey;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0.3px;
+      &:focus-visible {
+        outline: 1px solid transparent;
       }
     }
   }
