--- a/testTE/src/app/user-info/user-info.component.scss
+++ b/testTE/src/app/user-info/user-info.component.scss
@@ -1,4 +1,9 @@
 :host {
+  width: 8%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0 0 0 1.2%;
   .ava {
     width: 32px;
     height: 32px;
