--- a/testTE/src/styles.scss
+++ b/testTE/src/styles.scss
@@ -2,7 +2,8 @@ $primary-blue: #1074cc;
 $primary-red: #cc1910;
 $primary-white: #ffffff;
 $text-black: #2a3033;
-$text-grey: #7f878c;
+$text-dark-grey: #7f878c;
+$text-grey: #9aa1a6;
 $text-light-grey: #e1e4e6;
 
 html,
