--- a/testTE/src/app/user-info/user-info.component.html
+++ b/testTE/src/app/user-info/user-info.component.html
@@ -1,2 +1,2 @@
-<app-notification></app-notification>
-<div class="ava"></div>
+<app-notification class="makeInvisible"></app-notification>
+<div class="ava makeInvisible"></div>
