--- a/testTE/src/app/input/input.component.scss
+++ b/testTE/src/app/input/input.component.scss
@@ -38,6 +38,7 @@
     flex-direction: column;
     width: 90%;
     input {
+      width: 100%;
       padding: 0.1% 2%;
       height: 3em;
       border: 1px solid transparent;
