--- a/testTE/src/app/tab/aside/aside.component.scss
+++ b/testTE/src/app/tab/aside/aside.component.scss
@@ -1,17 +1,35 @@
 @import "./../../../styles.scss";
 
 :host {
-  width: 30%;
-  display: block;
+  padding: 0 2.5%;
+  width: 26%;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border-right: 1px solid $text-dark-grey;
+  h5 {
+    margin: 9% 0 5%;
+    color: $text-dark-grey;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 14px;
+    letter-spacing: 0.011px;
+  }
   ul {
+    padding: 0;
+    margin: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     list-style-type: none;
     li {
-      color: $text-dark-grey;
-      font-size: 11px;
+      margin: 4% 0 6%;
+      color: $text-black;
+      font-size: 14px;
       font-style: normal;
       font-weight: 500;
       line-height: 14px;
