--- a/testTE/src/app/header/header.component.scss
+++ b/testTE/src/app/header/header.component.scss
@@ -1,4 +1,6 @@
-@import "./../../styles.scss";
+// @import "./../../styles.scss";
+@import "./../input/input.component.scss";
+
 :host {
   width: 100%;
   header {
