--- a/testTE/src/app/input/input.component.scss
+++ b/testTE/src/app/input/input.component.scss
@@ -1,4 +1,5 @@
 @import "./../../styles.scss";
+
 :host {
   display: flex;
   width: 53%;
@@ -6,14 +7,15 @@
   justify-content: space-between;
   margin-right: 25%;
   .wrapper {
-    margin-right: 4%;
+    position: relative;
+    margin: 0 0 0 5%;
     display: flex;
-    width: 93%;
-    justify-content: space-between;
+    width: 95%;
     .item {
       display: flex;
       align-items: center;
       gap: 12%;
+      margin: 0 5.3% 0 0;
       .icon {
         width: 1.4em;
       }
@@ -27,19 +29,27 @@
       }
     }
     .button--search {
-      margin: 0 0 0 6%;
+      margin: 0 3.5% 0 5%;
       border: none;
       background-color: transparent;
     }
+    .add {
+      width: 1.5em;
+      height: 1.5em;
+      margin: 1% 0;
+    }
   }
   .search__block {
-    position: relative;
+    position: absolute;
+    top: -13%;
+    left: -5%;
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 95%;
+    height: 3em;
     input {
-      width: 100%;
       padding: 0.1% 2%;
+      width: 100%;
       height: 3em;
       border: 1px solid transparent;
       border-radius: 3px;
@@ -54,4 +64,41 @@
       }
     }
   }
+}
+
+@keyframes openSearch {
+  0% {
+    width: 0%;
+    margin-left: 100%;
+  }
+
+  100% {
+    width: 100%;
+    margin-left: 0%;
+  }
+}
+
+@keyframes closeSearch {
+  0% {
+    width: 100%;
+    margin-left: 0%;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  100% {
+    width: 0%;
+    opacity: 0;
+    margin-left: 100%;
+  }
+}
+
+.open {
+  animation: openSearch 1s;
+}
+
+.close {
+  animation: closeSearch 1s;
 }
