feat: add mobile

--- a/testTE/src/app/input/input.component.html
+++ b/testTE/src/app/input/input.component.html
@@ -8,6 +8,9 @@
   <button class="button--search" (click)="changeIsOpen()">
     <img src="/icons/search.png" alt="visits" />
   </button>
+  <button class="button--history">
+    <img src="/icons/history.png" alt="history" />
+  </button>
   <div class="search__block" *ngIf="isOpenInput">
     <input
       type="text"
