--- a/testTE/src/app/header/header.component.html
+++ b/testTE/src/app/header/header.component.html
@@ -1,5 +1,9 @@
-<header (mousedown)="hideSearch($event)" class="makeInvisible">
-  <img src="/images/logo.png" alt="logo" class="makeInvisible" />
+<header
+  (mousedown)="hideSearch($event)"
+  [ngClass]="settingsOpen ? 'white makeInvisible' : 'makeInvisible'"
+>
+  <app-burger class="makeInvisible"></app-burger>
+  <img src="/images/logo.png" alt="logo" class="logo makeInvisible" />
   <app-input #input></app-input>
   <app-user-info class="makeInvisible"></app-user-info>
 </header>
