--- a/testTE/src/app/header/header.component.scss
+++ b/testTE/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-// @import "./../../styles.scss";
 @import "./../input/input.component.scss";
 
 :host {
@@ -10,5 +9,43 @@
     align-items: center;
     justify-content: space-between;
     background-color: $primary-blue;
+  }
+}
+@media screen and (max-width: 1440px) and (min-width: 811px) {
+  :host {
+    header {
+      padding: 0 1%;
+      width: 98%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: $primary-blue;
+    }
+  }
+}
+
+@media screen and (max-width: 810px) and (min-width: 551px) {
+  :host {
+    header {
+      padding: 0 3%;
+      width: 90%;
+      flex-wrap: wrap;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) and (min-width: 414px) {
+  :host {
+    width: 100%;
+    header {
+      padding: 11% 3% 0;
+      width: 94%;
+      .logo {
+        margin: 0 0% 0 3%;
+      }
+    }
+    .white {
+      background-color: $primary-white;
+    }
   }
 }
