--- a/testTE/src/app/input/input.component.scss
+++ b/testTE/src/app/input/input.component.scss
@@ -1,5 +1,34 @@
 @import "./../../styles.scss";
 
+@keyframes openSearch {
+  0% {
+    width: 0%;
+    margin-left: 100%;
+  }
+
+  100% {
+    width: 100%;
+    margin-left: 0%;
+  }
+}
+
+@keyframes closeSearch {
+  0% {
+    width: 100%;
+    margin-left: 0%;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  100% {
+    width: 0%;
+    opacity: 0;
+    margin-left: 100%;
+  }
+}
+
 :host {
   display: flex;
   width: 53%;
@@ -32,6 +61,12 @@
       margin: 0 3.5% 0 5%;
       border: none;
       background-color: transparent;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    .button--history {
+      display: none;
     }
     .add {
       width: 1.5em;
@@ -64,41 +99,81 @@
       }
     }
   }
-}
-
-@keyframes openSearch {
-  0% {
-    width: 0%;
-    margin-left: 100%;
+  .open {
+    animation: openSearch 1s;
   }
 
-  100% {
-    width: 100%;
-    margin-left: 0%;
+  .close {
+    animation: closeSearch 1s;
   }
 }
 
-@keyframes closeSearch {
-  0% {
-    width: 100%;
-    margin-left: 0%;
-  }
-
-  30% {
-    opacity: 1;
-  }
-
-  100% {
-    width: 0%;
-    opacity: 0;
-    margin-left: 100%;
+@media screen and (930px >= width >620px) {
+  :host {
+    margin-right: 5%;
+    .wrapper {
+      flex-wrap: wrap;
+      .item {
+        gap: 8%;
+        margin: 0 3.3% 0 0;
+      }
+      .button--search {
+        margin: 0 1.5% 0 2%;
+        border: none;
+        background-color: transparent;
+      }
+      .add {
+        width: 1.5em;
+        height: 1.5em;
+        margin: 1% 0;
+      }
+    }
+    .search__block {
+      top: 5%;
+      left: -10%;
+      width: 95%;
+    }
   }
 }
 
-.open {
-  animation: openSearch 1s;
-}
+@media screen and (620px >= width >= 414px) {
+  :host {
+    width: 46%;
+    margin: 0;
+    .wrapper {
+      margin: 0;
+      width: 100%;
+      flex-direction: row-reverse;
+      .item {
+        display: none;
+      }
+      .button--search {
+        margin: 0 1.5% 0 0%;
+      }
+      .button--history {
+        display: block;
+        width: 3em;
+        margin: 0 3.5% 0 8%;
+        border: none;
+        background-color: transparent;
+      }
+      .add {
+        width: 1.5em;
+        height: 1.5em;
+        margin: 1% 0;
+      }
+    }
+    .search__block {
+      top: -35%;
+      left: -98%;
+      width: 19em;
+    }
+  }
+  .open {
+    animation: openSearch 1s;
+  }
 
-.close {
-  animation: closeSearch 1s;
+  .close {
+    animation: closeSearch 1s;
+  }
 }
