--- a/testTE/src/app/notification/notification.component.scss
+++ b/testTE/src/app/notification/notification.component.scss
@@ -28,3 +28,10 @@
     height: 24px;
   }
 }
+
+@media screen and (max-width: 550px) and (min-width: 414px) {
+  :host {
+    width: 88%;
+    margin: 0 0% 0 0;
+  }
+}
