--- a/testTE/src/app/tab/tab.component.scss
+++ b/testTE/src/app/tab/tab.component.scss
@@ -13,3 +13,11 @@
   background-color: $primary-white;
   filter: drop-shadow(0 0.2em 0.2em $text-dark-grey);
 }
+@media screen and (600px >= width >= 414px) {
+  :host {
+    width: 100vw;
+    height: 100vh;
+    top: 110%;
+    left: -17%;
+  }
+}
