--- a/testTE/src/app/user-info/user-info.component.scss
+++ b/testTE/src/app/user-info/user-info.component.scss
@@ -10,5 +10,26 @@
     border: 1px solid transparent;
     border-radius: 5px;
     background-image: url("/images/AVA.png");
+    background-size: contain;
+  }
+}
+
+@media screen and (max-width: 810px) and (min-width: 551px) {
+  :host {
+    width: 12%;
+    margin: 0 0 0 3%;
+    .ava {
+      width: 24px;
+      height: 24px;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) and (min-width: 414px) {
+  :host {
+    width: 10%;
+    .ava {
+      display: none;
+    }
   }
 }
