fixed: fixed mobile styles

--- a/testTE/src/app/header/header.component.html
+++ b/testTE/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   [ngClass]="settingsOpen ? 'white makeInvisible' : 'makeInvisible'"
 >
   <app-burger class="makeInvisible"></app-burger>
-  <img src="/images/logo.png" alt="logo" class="logo makeInvisible" />
+  <img src="./images/logo.png" alt="logo" class="logo makeInvisible" />
   <app-input #input></app-input>
   <app-user-info class="makeInvisible"></app-user-info>
 </header>
