--- a/testTE/src/app/input/input.component.html
+++ b/testTE/src/app/input/input.component.html
@@ -6,10 +6,10 @@
   </div>
   }
   <button class="button--search" (click)="changeIsOpen()">
-    <img src="/icons/search.png" alt="visits" />
+    <img src="./icons/search.png" alt="visits" />
   </button>
   <button class="button--history">
-    <img src="/icons/history.png" alt="history" />
+    <img src="./icons/history.png" alt="history" />
   </button>
   <div class="search__block" *ngIf="isOpenInput">
     <input
@@ -24,5 +24,5 @@
     <app-tab></app-tab>
     }
   </div>
-  <img src="/icons/add2.png" alt="visits" class="add" />
+  <img src="./icons/add2.png" alt="visits" class="add" />
 </div>
