--- a/testTE/src/app/notification/notification.component.html
+++ b/testTE/src/app/notification/notification.component.html
@@ -5,7 +5,7 @@
   {{ count }}
 </div>
 <img
-  src="/icons/notifications.png"
+  src="./icons/notifications.png"
   alt="notification"
   class="icon makeInvisible"
 />
