--- a/testTE/src/app/user-info/user-info.component.scss
+++ b/testTE/src/app/user-info/user-info.component.scss
@@ -1,3 +1,5 @@
+@import "./../../styles.scss";
+
 :host {
   width: 8%;
   display: flex;
@@ -9,7 +11,7 @@
     height: 32px;
     border: 1px solid transparent;
     border-radius: 5px;
-    background-image: url("/images/AVA.png");
+    background-image: url("./../../../public/images/AVA.png");
     background-size: contain;
   }
 }
